--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,16 @@
 		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.alperArslan</groupId>
 	<artifactId>springframework-dependency-injection</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>springframework-dependency-injection</name>
 	<description>Dependency Injection Examples</description>
+
+	<packaging>pom</packaging>
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
