Environment Variables and Command Line Args Example

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,3 +1,5 @@
 alper.username=superuser
 alper.password=dbPassword
 alper.jdbcurl=someUrlforDB
+
+#run/debug configuration can be used to override those properties, it overrides using environment and cmdLine
