--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,5 +1,8 @@
-alper.username=superuser
-alper.password=dbPassword
-alper.jdbcurl=someUrlforDB
+#alper.username=superuser
+#alper.password=dbPassword
+#alper.jdbcurl=someUrlforDB
 
 #run/debug configuration can be used to override those properties, it overrides using environment and cmdLine
+
+#also above properties commented out to show application.properties can be used
+# to set those variables. Spring boot handles it for us in this way.
