--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=cat,EN
+spring.profiles.active=cat,EN,dev
 alper.username=superuser
 alper.password=dbPassword
 alper.jdbcurl=someUrlforDB
