Spring Boot application.yml Example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=cat,EN,dev
+#spring.profiles.active=cat,EN
 alper.username=superuser
 alper.password=dbPassword
-alper.jdbcurl=someUrlforDB
+#alper.jdbcurl=somePropertiesFileUrlforDB
