Spring Boot application.yml with multiple profiles in one yml file Example

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,16 @@ spring:
     active:
       - EN
       - dog
+      - prod
 
 alper:
   jdbcurl: someYmlFileUrlforDB
+
+---
+
+spring:
+  profiles:
+    - prod
+
+alper:
+  jdbcurl: someProdYmlFileUrlforDB
