Property binding using ConfigurationProperties annotation Example

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
 alper:
   jdbcurl: someYmlFileUrlforDB
 
+banana:
+  username: bananaPropertyDbUser
+  password: bananaPropertyPassword
+  jdbcurl: bananaPropertyUrl
+
 ---
 
 spring:
